Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39301

Compiling an application with ICC it fails with RHEL 5

    XMLWordPrintable

Details

    • 6e32a58428fc0cf95dd3c7cae6286be5ce44a833

    Description

      Environment:

      • ICC 14.0.2
      • RHEL 5
      • 64-bit
      Error:
      ../../../Third_Party_Libraries/Qt/Linux64/include/QtCore/qmap.h(125): error:
      invalid type conversion: "const QMapNodeBase *" to "QMapNode<Key, T> *"
      const QMapNode *minimumNode() const { return static_cast<QMapNode
      *>(QMapNodeBase::minimumNode()); }
      

      Should line 125 be in this case?:

      const QMapNode *minimumNode() const { return static_cast<const QMapNode
      *>(QMapNodeBase::minimumNode()); }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes