Remove unused QMapNode{,Base}::minimumNode

These functions are not used anywhere. Since the classes are not
documented, we're free to remove the inline functions.

The implementation of the const function in QMapNode is also bogus: it
discards a const qualifier.

Task-number: QTBUG-39301
Change-Id: Ib8fd10a4da4b58a62cef17017ea6127c4d964325
Reviewed-by: Lars Knoll <lars.knoll@digia.com>